--- a/src/components/UI/Navbar/MyNavbar.module.css
+++ b/src/components/UI/Navbar/MyNavbar.module.css
@@ -6,7 +6,7 @@
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.1);
-  z-index: 20;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: space-between;
