--- a/src/components/UI/modal/MyModal.module.css
+++ b/src/components/UI/modal/MyModal.module.css
@@ -7,6 +7,7 @@
   display: none;
   background: rgba(0,0,0, 0.4);
   /* opacity: 0; */
+  z-index: 3;
 }
 
 .myModalContent {
