--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -235,7 +235,6 @@ table {
   margin-left: 1%;
   padding: 0;
 }
-
 .task {
   position: relative;
   display: inline-block;
@@ -448,6 +447,9 @@ table {
   }
   .taskUpdForm {
     width: calc(80vw - 24px);
+  }
+  .task:hover .tooltip-text {
+    visibility: hidden;
   }
 }
 
